--- a/main.html
+++ b/main.html
@@ -8,6 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="grid">
+		<span class="one">1</span>
+		<span class="two">2</span>
+		<span class="three">3</span>
+		<span class="four">4</span>
+		<span class="five">5</span>
+		<span class="six">6</span>
+		<span class="seven">7</span>
+		<span class="eight">8</span>
+		<span class="nine">9</span>
+		<span class="ten">10</span>	
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
