--- a/main.html
+++ b/main.html
@@ -8,18 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div class="grid">
-		<span class="one">1</span>
-		<span class="two">2</span>
-		<span class="three">3</span>
-		<span class="four">4</span>
-		<span class="five">5</span>
-		<span class="six">6</span>
-		<span class="seven">7</span>
-		<span class="eight">8</span>
-		<span class="nine">9</span>
-		<span class="ten">10</span>	
-	</div>
+	<div class="grid-container">
+    <div class="grid-item item1 green">1</div>
+    <div class="grid-item item2 green">2</div>
+    <div class="grid-item">3</div>
+    <div class="grid-item item4 green">4</div>
+    <div class="grid-item item5 green">5</div>
+    <div class="grid-item">6</div>
+    <div class="grid-item">7</div>
+    <div class="grid-item">8</div>
+    <div class="grid-item">9</div>
+    <div class="grid-item item10 green">10</div>
+  </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
