--- a/main.html
+++ b/main.html
@@ -11,13 +11,13 @@
 	<div class="grid-container">
     <div class="grid-item item1 green">1</div>
     <div class="grid-item item2 green">2</div>
-    <div class="grid-item">3</div>
+    <div class="grid-item green">3</div>
     <div class="grid-item item4 green">4</div>
     <div class="grid-item item5 green">5</div>
-    <div class="grid-item">6</div>
-    <div class="grid-item">7</div>
-    <div class="grid-item">8</div>
-    <div class="grid-item">9</div>
+    <div class="grid-item green">6</div>
+    <div class="grid-item green">7</div>
+    <div class="grid-item green">8</div>
+    <div class="grid-item green">9</div>
     <div class="grid-item item10 green">10</div>
   </div>
     <script type="text/javascript" src="./script.js">
