--- a/main.html
+++ b/main.html
@@ -8,18 +8,20 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div class="grid-container">
-    <div class="grid-item item1 green">1</div>
-    <div class="grid-item item2 green">2</div>
-    <div class="grid-item green">3</div>
-    <div class="grid-item item4 green">4</div>
-    <div class="grid-item item5 green">5</div>
-    <div class="grid-item green">6</div>
-    <div class="grid-item green">7</div>
-    <div class="grid-item green">8</div>
-    <div class="grid-item green">9</div>
-    <div class="grid-item item10 green">10</div>
-  </div>
+	<div id="grid" class="grid-container">
+    <div class="grid-item item1">1</div>
+    <div class="grid-item item2">2</div>
+    <div class="grid-item">3</div>
+    <div class="grid-item item4">4</div>
+    <div class="grid-item item5">5</div>
+    <div class="grid-item item6">6</div>
+    <div class="grid-item item7">7</div>
+    <div class="grid-item item8">8</div>
+    <div class="grid-item item9">9</div>
+    <div class="grid-item item10">10</div>
+		
+    <!-- ...and so on for the rest of the items -->
+</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
